Mon Aug 26 16:51:01 2013 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Added "drv" target to the top level Makefile (SF patch #18).
	* Renamed the ppd/*.drv files to ppd/*.drv.in to fix the build process
	  (SF patch #17).
	* When installing the *.drv files, install them as
	  "splix-<manufacturer>.drv", to avoid name clashes (SF patch #16).

Mon Apr  8 00:08:01 2013 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* When a print job sent to CUPS 1.6.2 from iOS is converted to
	  PostScript with the pdftops filter of cups-filters, the resulting
	  PostScript does not contain a "%%Creator" line in its header, which
	  is used by pstoqpdl as marker for where to insert MediaChoice amd
	  color correction info. This change inserts the missing "%%Creator"
	  when it reaches "%%EndComments". It also corrects a minor error in
	  the existing code which was trying to match an incorrect string.
	  Thanks to Martin Crossley (martin at crossleys dot biz) for the
	  patch (SF: #3610240).

Fri Jul  7 22:33:01 2012 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Commented out the entries for the Samsung CLP-610 and CLP-610ND
	  in ppd/smasung.drv and ppd/Makefile as these two printers are
	  reported to not work with SpliX. Removed also the pre-built PPD
	  files for these printers (Ubuntu bug #898986).

Wed Feb 29 15:07:01 2012 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Allow installing only the CUPS .drv file instead of ready-made PPD
	  files (SF: #3446934, thanks to Jiri Popelka from Red Hat for the
	  patch).

	* Allow installing PPD files into a custom directory (SF: #3446190,
	  thanks to Jiri Popelka from Red Hat for the patch).

	* Do not strip the compiled executable when installing via "make
	  install" to preserve the symbols when the compilation was done
	  in debug mode (SF: #3444332, thanks to Jiri Popelka from Red Hat for
	  the patch).

	* Removed executable bit from the files include/algo0x0d.h,